<resources>
    <string name="app_name">Flickr Gallery Application</string>
    <string name="flickr_logo">Flickr Logo</string>
    <string name="galley_image">Galley Image</string>
    <string name="error_image">Error Image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try Again</string>
    <string name="image_author">Taken by %s on %s</string>
    <string name="change_sort">Change Sort</string>
    <string name="change_filter">Change Filter</string>
    <string name="flickr_gallery">Flickr Gallery</string>
    <string name="add_tag">Add Tags</string>
    <string name="tag_close">Tag close</string>
    <string name="search">Search</string>
    <string name="all">All tags</string>
    <string name="any">Any tag</string>
    <string name="language">Language</string>
    <string name="drop_down">Drop Down</string>
    <string name="reset">Reset</string>
    <string name="should_contain">Should contain</string>
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>Korean</item>
        <item>Portuguese (Brazilian)</item>
        <item>Traditional Chinese (Hong Kong)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="via_email">Via Email</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="three_dots_menu">Three dots menu</string>
</resources>