<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.zahir.flickrgalleryapplication.ui.details.OptionsBottomSheetFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_big">

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_small"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{() -> fragment.onShareButtonClick()}"
            android:text="@string/via_email"
            android:textColor="@color/black"
            app:drawableTopCompat="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_small"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{() -> fragment.onSaveButtonClick()}"
            android:text="@string/save_to_gallery"
            android:textColor="@color/black"
            app:drawableTopCompat="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_open"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_share"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_small"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{() -> fragment.onOpenToBrowserButtonClick()}"
            android:text="@string/open_in_browser"
            android:textColor="@color/black"
            app:drawableTopCompat="@drawable/ic_open_browser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_save"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>