<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.zahir.flickrgalleryapplication.ui.customviews.TagView
                android:id="@+id/tag_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tag_mode"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="@dimen/margin_big"
                android:text="@string/tag_mode"
                app:layout_constraintBottom_toBottomOf="@id/radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/radio_group" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/tv_tag_mode"
                app:layout_constraintTop_toBottomOf="@id/tag_view">

                <RadioButton
                    android:id="@+id/rb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/rb_any"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_big"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/language_spinner_holder" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/language_spinner_holder"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_big"
                app:layout_constraintBottom_toTopOf="@id/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_language"
                app:layout_constraintTop_toBottomOf="@id/radio_group">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_dropdown"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:contentDescription="@string/drop_down"
                    android:src="@drawable/ic_arrow_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/tag_background"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_big"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/clear"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language_spinner_holder" />

            <TextView
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:background="@drawable/tag_background"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding_big"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search"
                app:layout_constraintTop_toBottomOf="@id/language_spinner_holder" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>