<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zahir.flickrgalleryapplication.ui.gallery.GalleryActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shouldBeVisible="@{viewModel.isLoading}" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/filter_container"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Theme.AppCompat.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|enterAlways|snap">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/flickr_gallery"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/sort"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_small"
                            android:text="@string/change_sort"
                            android:textColor="@color/black"
                            android:textSize="10sp"
                            android:layout_marginEnd="@dimen/margin_medium"
                            app:drawableTopCompat="@drawable/ic_sort"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/filter"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            app:shouldBeVisible="@{viewModel.isNetworkCallSuccessful}"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:id="@+id/filter"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/margin_medium"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_small"
                            android:text="@string/change_filter"
                            android:textColor="@color/black"
                            android:textSize="10sp"
                            app:drawableTopCompat="@drawable/ic_filter"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shouldBeVisible="@{viewModel.isNetworkCallSuccessful}"
                            tools:ignore="SmallSp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gallery_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter_container"
                app:shouldBeVisible="@{viewModel.isNetworkCallSuccessful}">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                    tools:listitem="@layout/item_gallery" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shouldBeVisible="@{!viewModel.isNetworkCallSuccessful}"
            tools:visibility="gone">

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/error_image"
                android:text="@{viewModel.errorMessage}"
                android:textColor="@color/black"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/something_went_wrong" />

            <Button
                android:id="@+id/btn_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.getImages()}"
                android:padding="@dimen/padding_big"
                android:text="@string/try_again"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_error" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>